tests/expectations/compiler/array/array_too_large_fail.out
DCE_ENABLED:
Error [ETYC0372077]: An array cannot have more than 32 elements, found one with 33 elements
    --> compiler-test:3:20
     |
   3 |     transition foo(a: [bool; 33]) -> bool {
     |                    ^^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372077]: An array cannot have more than 32 elements, found one with 33 elements
    --> compiler-test:3:20
     |
   3 |     transition foo(a: [bool; 33]) -> bool {
     |                    ^^^^^^^^^^^^^
